--- a/templates/about.html
+++ b/templates/about.html
@@ -15,7 +15,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="./static/assets/apple-icon-180x180.png">
   <link href="./static/assets/favicon.ico" rel="icon">
 
-  <title>Title page</title>  
+  <title>About - Andrew Eubanks</title>  
 
 <link href="./static/main.3f6952e4.css" rel="stylesheet"></head>
 
@@ -37,10 +37,11 @@
 
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav ">
-          <li><a href="./index.html" title="">01 : Home</a></li>
-          <li><a href="./works.html" title="">02 : Works</a></li>
-          <li><a href="./about.html" title="">03 : About me</a></li>
-          <li><a href="./contact.html" title="">04 : Contact</a></li>
+          <li><a href="./index.html" title="" class="active">Home</a></li>
+          <li><a href="./works.html" title="" class="active">Work Experience</a></li>
+          <li><a href="./certifications.html" title="" class="active">Certifications</a></li>
+          <li><a href="./about.html" title="" class="active">About me</a></li>
+          <li><a href="./contact.html" title="" class="active">Contact</a></li>
         </ul>
 
 
@@ -54,26 +55,25 @@
       <div class="row">
         <div class="col-xs-12">
           <div class="section-container-spacer text-center">
-            <h1 class="h2">03 : About me</h1>
-          </div>
+            <h1 class="h2">Andrew Eubanks</h1>
+          <!-- </div> -->
           
           <div class="row">
             <div class="col-md-10 col-md-offset-1">
               <div class="row">
-                <div class="col-xs-12 col-md-6">
-                  <h3>Consectetur adipiscing elit</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas luctus at sem quis varius. 
-                  Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Cras ultrices hendrerit nisl.</p>
-                  <h3>Ut enim ad minim  </h3>
+                <div class="col-xs-12 col-md-12">
+                  <!-- <h3>Andrew Eubanks</h3> -->
+                  <p>I am an Equity Derivatives Trader, trading independently using own funds. I hold a Bachelor's degree in Finance. Using my proficiency in Advanced Microsoft Excel, I take up freelancing opportunities involving the same. Apart from career and academics, I am also a ballroom dancer and train for bodybuilding.</p>
+                  <!-- <h3>Ut enim ad minim  </h3>
                   <p>Duis aute irure dolor in reprehenderit in voluptate velit esse
                   cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
                   proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
                   <h3>Maecenas luctus at sem quis varius</h3>
                   <p>
-                  Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Phasellus iaculis magna sagittis elit sagittis, at hendrerit lorem venenatis. Morbi accumsan iaculis blandit. Cras ultrices hendrerit nisl.</p>
+                  Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Phasellus iaculis magna sagittis elit sagittis, at hendrerit lorem venenatis. Morbi accumsan iaculis blandit. Cras ultrices hendrerit nisl.</p> -->
                 </div>
-                <div class="col-xs-12 col-md-6">
-                  <img src="./static/assets/images/profil.jpg" class="img-responsive" alt="">
+                <div class="col-xs-12 col-md-12">
+                  <img src="./static/assets/images/about.jpg" class="rounded mx-auto d-block" alt="">
                 </div>
               </div>
             </div>
