--- a/templates/certifications.html
+++ b/templates/certifications.html
@@ -15,7 +15,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="./static/assets/apple-icon-180x180.png">
   <link href="./static/assets/favicon.ico" rel="icon">
 
-  <title>Work - Andrew Eubanks</title>  
+  <title>Certifications - Andrew Eubanks</title>  
 
 <link href="./static/main.3f6952e4.css" rel="stylesheet"></head>
 
@@ -56,7 +56,7 @@
       
       <div class="col-sm-8 col-sm-offset-2 section-container-spacer">
         <div class="text-center">
-          <h1 class="h2">Work Experience</h1>
+          <h1 class="h2">Certifications</h1>
           <!-- <p>Over 3 years of experience in Stock Market Trading and Data Science.</p> -->
         </div>
       </div>
@@ -71,35 +71,35 @@
                     <div class="col-sm-4">
 
                       <!-- <a href="./work.html" title="" class="black-image-project-hover"> -->
-                        <img src="./static/assets/images/work001-01.jpg" alt="" class="img-responsive">
+                        <img src="./static/assets/images/nism.jpg" alt="" class="img-responsive">
                       </a>
                       <div class="card-container card-container-lg">
                         <!-- <h4>001/006</h4> -->
-                        <h3>Derivatives Trading</h3>
-                        <p>Abundance Consulting Services<br>2020 - Present</p>
-                        <a href="./work.html" title="" class="btn btn-default">Discover</a>
+                        <h3>Series VIII</h3>
+                        <p>Equity Derivatives<br>Aug 2023 - Aug 2026</p>
+                        <a href="https://i.imgflip.com/4549yl.jpg" target="_blank" title="" class="btn btn-default">Show Credential</a>
                       </div>
                     </div>
                     <div class="col-sm-4">
                       <!-- <a href="./work.html" title="" class="black-image-project-hover"> -->
-                        <img src="./static/assets/images/work02-hover.jpg" alt="" class="img-responsive">
+                        <img src="./static/assets/images/nism.jpg" alt="" class="img-responsive">
                       </a>
                       <div class="card-container card-container-lg">
                         <!-- <h4>002/006</h4> -->
-                        <h3>Data Management Intern</h3>
-                        <p>Zero Grand Consulting Services Pvt. Ltd.<br> Apr 2021 - Nov 2021 </p>
-                        <a href="./work2.html" title="" class="btn btn-default">Discover</a>
+                        <h3>Series XV</h3>
+                        <p>Research Analyst<br>Aug 2023 - Aug 2026</p>
+                        <a href="https://i.imgflip.com/4549yl.jpg" target="_blank" title="" class="btn btn-default">Show Credential</a>
                       </div>
                     </div>
                     <div class="col-sm-4">
                       <!-- <a href="./work.html" title="" class="black-image-project-hover"> -->
-                        <img src="./static/assets/images/work03-hover.jpg" alt="" class="img-responsive">
+                        <img src="./static/assets/images/ztm.jpg" alt="" class="img-responsive">
                       </a>
                       <div class="card-container card-container-lg">
                         <!-- <h4>003/006</h4> -->
-                        <h3>Freelance Data Analyst</h3>
-                        <p>Sam's Mithai<br>Nov 2019 - Dec 2019</p>
-                        <a href="./work3.html" title="" class="btn btn-default">Discover</a>
+                        <h3>Python Developer</h3>
+                        <p>Zero to Mastery Academy<br>September 2023</p>
+                        <a href="https://i.imgflip.com/4549yl.jpg" target="_blank" title="" class="btn btn-default">Show Credential</a>
                       </div>
                     </div>
                     
@@ -145,16 +145,16 @@
                     </div>
                     
                 </div>
-                <!--/row-->
+                <!-- /row -->
             </div>
             
-            <!--/item-->
+            <!-- /item -->
         </div>
-        <!--/carousel-inner--> 
-        <!-- <a class="left carousel-control" href="#myCarousel" data-slide="prev">‹</a> ## COMMENTED OUT BECAUSE ACTION CONTRLS NOT NEEDED
+        <!-- carousel-inner--> 
+      <!--   <a class="left carousel-control" href="#myCarousel" data-slide="prev">‹</a>
 
-        <a class="right carousel-control" href="#myCarousel" data-slide="next">›</a> -->
-     </div>
+        <a  class="right carousel-control" href="#myCarousel" data-slide="next">›</a>
+     </div> -->
 
 
 
