--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="./static/assets/apple-icon-180x180.png">
   <link href="./static/assets/favicon.ico" rel="icon">
 
-  <title>Title page</title>  
+  <title>Home - Andrew Eubanks</title>  
 
 <link href="./static/main.3f6952e4.css" rel="stylesheet"></head>
 
@@ -36,10 +36,11 @@
 
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav ">
-          <li><a href="./index.html" title="">01 : Home</a></li>
-          <li><a href="./works.html" title="">02 : Works</a></li>
-          <li><a href="./about.html" title="">03 : About me</a></li>
-          <li><a href="./contact.html" title="">04 : Contact</a></li>
+          <li><a href="./index.html" title="" class="active">Home</a></li>
+          <li><a href="./works.html" title="" class="active">Work Experience</a></li>
+          <li><a href="./certifications.html" title="" class="active">Certifications</a></li>
+          <li><a href="./about.html" title="" class="active">About me</a></li>
+          <li><a href="./contact.html" title="" class="active">Contact</a></li>
         </ul>
 
 
@@ -48,7 +49,7 @@
   </nav>
 </header>
 <!-- Add your site or app content here -->
-  <div class="hero-full-container background-image-container white-text-container" style="background-image: url('./static/assets/images/space.jpg')">
+  <div class="hero-full-container background-image-container white-text-container" style="background-image: url('./static/assets/images/space.jpeg')">
     <div class="container">
       <div class="row">
         <div class="col-xs-12">
@@ -56,7 +57,7 @@
             <div class="text-content">
               <h1>Hello,<br>
                 <span id="typed-strings">
-                  <span>I'm Yashvardhan Jain</span>
+                  <span>I'm Andrew Eubanks</span>
                   <span>Derivatives Trader</span>
                   <span>Data Analyst</span>
                   <span>Bodybuilder</span>
