--- a/templates/thankyou.html
+++ b/templates/thankyou.html
@@ -15,7 +15,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="./static/assets/apple-icon-180x180.png">
   <link href="./static/assets/favicon.ico" rel="icon">
 
-  <title>Title page</title>  
+  <title>Gratitude - Andrew Eubanks</title>  
 
 <link href="./static/main.3f6952e4.css" rel="stylesheet"></head>
 
@@ -37,10 +37,11 @@
 
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav ">
-          <li><a href="./index.html" title="">01 : Home</a></li>
-          <li><a href="./works.html" title="">02 : Works</a></li>
-          <li><a href="./about.html" title="">03 : About me</a></li>
-          <li><a href="./contact.html" title="">04 : Contact</a></li>
+         <li><a href="./index.html" title="" class="active">Home</a></li>
+          <li><a href="./works.html" title="" class="active">Work Experience</a></li>
+          <li><a href="./certifications.html" title="" class="active">Certifications</a></li>
+          <li><a href="./about.html" title="" class="active">About me</a></li>
+          <li><a href="./contact.html" title="" class="active">Contact</a></li>
         </ul>
 
 
@@ -54,7 +55,7 @@
       <div class="row">
         <div class="col-xs-12">
           <div class="section-container-spacer text-center">
-            <h1 class="h2">04 : Contact me</h1>
+            <h1 class="h2">Contact me</h1>
           </div>
           
           <div class="row">
