--- a/templates/work.html
+++ b/templates/work.html
@@ -12,12 +12,12 @@
   <!-- Disable tap highlight on IE -->
   <meta name="msapplication-tap-highlight" content="no">
   
-  <link rel="apple-touch-icon" sizes="180x180" href="assets/apple-icon-180x180.png">
-  <link href="assets/favicon.ico" rel="icon">
+  <link rel="apple-touch-icon" sizes="180x180" href="./static/assets/apple-icon-180x180.png">
+  <link href="./static/assets/favicon.ico" rel="icon">
 
-  <title>Title page</title>  
+  <title>Derivatives Trader - Andrew Eubanks</title>  
 
-<link href="main.3f6952e4.css" rel="stylesheet"></head>
+<link href="./static/main.3f6952e4.css" rel="stylesheet"></head>
 
 <body class="">
 <div id="site-border-left"></div>
@@ -37,21 +37,21 @@
 
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav ">
-          <li><a href="./index.html" title="">01 : Home</a></li>
-          <li><a href="./works.html" title="">02 : Works</a></li>
-          <li><a href="./about.html" title="">03 : About me</a></li>
-          <li><a href="./contact.html" title="">04 : Contact</a></li>
-          <li><a href="./components.html" title="">05 : Components</a></li>
+          <li><a href="./index.html" title="" class="active">Home</a></li>
+          <li><a href="./works.html" title="" class="active">Work Experience</a></li>
+          <li><a href="./certifications.html" title="" class="active">Certifications</a></li>
+          <li><a href="./about.html" title="" class="active">About me</a></li>
+          <li><a href="./contact.html" title="" class="active">Contact</a></li>
         </ul>
 
 
           <ul class="nav navbar-nav navbar-right navbar-small visible-md visible-lg">
-            <li><a href="./index.html" title="" class="active">001</a></li>
-            <li><a href="./index.html" title="">002</a></li>
-            <li><a href="./index.html" title="">003</a></li>
-            <li><a href="./index.html" title="">004</a></li>
+            <li><a href="./work.html" title="" class="active">Derivatives Trader</a></li>
+            <li><a href="./work2.html" title="">Data Management Intern</a></li>
+            <li><a href="./work3.html" title="">Freelance Data Analyst</a></li>
+            <!-- <li><a href="./index.html" title="">004</a></li>
             <li><a href="./index.html" title="">005</a></li>
-            <li><a href="./index.html" title="">006</a></li>
+            <li><a href="./index.html" title="">006</a></li> -->
           </ul>
 
 
@@ -63,37 +63,40 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
-        <img src="assets/images/work001-01.jpg" class="img-responsive" alt="">
+        <img src="./static/assets/images/deriv.jpg" class="img-responsive" alt="">
         <div class="card-container">
           <div class="text-center">
-            <h1 class="h2">001 : Fringilla sit amet</h1>
+            <h1 class="h2">Derivatives Trader</h1>
           </div>
-          <p>Nulla facilisi. Vivamus vestibulum, elit in scelerisque ultricies, nisl nunc pulvinar ligula, id sodales arcu sapien in nisi. Quisque libero enim, mattis non augue posuere, venenatis dapibus urna.</p>
+          <p>● Managing family portfolio trading in Equity and Derivatives<br>
+● Employing directional and non-directional strategies in option selling, buying, and cash segment<br>
+● Highly focused on risk management<br>
+● Proven track record, adaptability, and disciplined mindset</p>
 
           <blockquote>
-            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante."</p>
-            <small class="pull-right">Irina Martin</small>
+            <p>"The biggest risk is not taking a risk."</p>
+            <small class="pull-right">Anonymous</small>
           </blockquote>
         </div>
       </div>
 
       
       
-      <div class="col-md-8 col-md-offset-2 section-container-spacer">
+      <!-- <div class="col-md-8 col-md-offset-2 section-container-spacer">
         <div class="row">
           <div class="col-xs-12 col-md-6">
-            <img src="assets/images/work001-02.jpg" class="img-responsive" alt="">
+            <img src="./static/assets/images/work001-02.jpg" class="img-responsive" alt="">
             <p>Menphis skyline</p>
           </div>
           <div class="col-xs-12 col-md-6">
-            <img src="assets/images/work001-03.jpg" class="img-responsive" alt="">
+            <img src="./static/assets/images/work001-03.jpg" class="img-responsive" alt="">
             <p>Menphis skyline</p>
           </div>
         </div>
       </div>
 
-      <div class="col-xs-12">
-        <img src="assets/images/work001-04.jpg" class="img-responsive" alt="">
+      <div class="col-xs-12"> -->
+        <!-- <img src="./static/assets/images/work001-04.jpg" class="img-responsive" alt=""> -->
       </div>
 
     </div>
@@ -130,6 +133,6 @@
   ga('send', 'pageview');
 </script>
 
---> <script type="text/javascript" src="main.70a66962.js"></script></body>
+--> <script type="text/javascript" src="./static/main.70a66962.js"></script></body>
 
 </html>
