--- a/templates/work2.html
+++ b/templates/work2.html
@@ -15,7 +15,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="./static/assets/apple-icon-180x180.png">
   <link href="./static/assets/favicon.ico" rel="icon">
 
-  <title>Contact - Andrew Eubanks</title>  
+  <title>Data Management Intern - Andrew Eubanks</title>  
 
 <link href="./static/main.3f6952e4.css" rel="stylesheet"></head>
 
@@ -24,7 +24,7 @@
 <div id="site-border-right"></div>
 <div id="site-border-top"></div>
 <div id="site-border-bottom"></div>
- <!-- Add your content of header -->
+<!-- Add your content of header -->
 <header>
   <nav class="navbar  navbar-fixed-top navbar-default">
     <div class="container">
@@ -37,7 +37,7 @@
 
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav ">
-          <li><a href="./index.html" title="" class="active">Home</a></li>
+         <li><a href="./index.html" title="" class="active">Home</a></li>
           <li><a href="./works.html" title="" class="active">Work Experience</a></li>
           <li><a href="./certifications.html" title="" class="active">Certifications</a></li>
           <li><a href="./about.html" title="" class="active">About me</a></li>
@@ -45,78 +45,63 @@
         </ul>
 
 
+          <ul class="nav navbar-nav navbar-right navbar-small visible-md visible-lg">
+            <li><a href="./work.html" title="">Derivatives Trader</a></li>
+            <li><a href="./work2.html" title="">Data Management Intern</a></li>
+            <li><a href="./work3.html" title="">Freelance Data Analyst</a></li>
+            <!-- <li><a href="./index.html" title="">004</a></li>
+            <li><a href="./index.html" title="">005</a></li>
+            <li><a href="./index.html" title="">006</a></li> -->
+          </ul>
+
+
       </div> 
     </div>
   </nav>
 </header>
-
 <div class="section-container">
-    <div class="container">
-      <div class="row">
-        <div class="col-xs-12">
-          <div class="section-container-spacer text-center">
-            <h1 class="h2">Contact me</h1>
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12">
+        <img src="./static/assets/images/datamgmt.jpg" class="img-responsive" alt="">
+        <div class="card-container">
+          <div class="text-center">
+            <h1 class="h2">Data Management Intern</h1>
           </div>
-          
-          <div class="row">
-            <div class="col-md-10 col-md-offset-1">
-               <form action="submit_form" method="post" class="reveal-content">
-                  <div class="row">
-                    <div class="col-md-7">
-                      <div class="form-group">
-                        <input name="email" type="email" class="form-control" id="email" placeholder="Email">
-                      </div>
-                      <div class="form-group">
-                        <input name="subject" type="text" class="form-control" id="subject" placeholder="Subject">
-                      </div>
-                      <div class="form-group">
-                        <textarea name="message" class="form-control" rows="5" placeholder="Enter your message"></textarea>
-                      </div>
-                      <button type="submit" class="btn btn-default btn-lg">Send</button>
-                    </div>
-                    <div class="col-md-5 address-container">
-                      <ul class="list-unstyled">
-                        <li>
-                          <span class="fa-icon">
-                            <i class="fa fa-phone" aria-hidden="true"></i>
-                          </span>
-                         +1 234 5678 9999
-                        </li>
-                        <li>
-                          <span class="fa-icon">
-                            <i class="fa fa-at" aria-hidden="true"></i>
-                          </span>
-                          andreweubanks@gmail.com
-                        </li>
-                        <li>
-                          <span class="fa-icon">
-                            <i class="fa fa fa-map-marker" aria-hidden="true"></i>
-                          </span>
-                          Ohio
-                        </li>
-                      </ul>
-                      <h3>Follow me on social networks</h3>
-                      <a href="http://www.linkedin.com/" target="_blank" title="" class="fa-icon">
-                        <i class="fa fa-linkedin"></i>
-                      </a>
-                      <a href="http://www.twitter.com/" target="_blank" title="" class="fa-icon">
-                        <i class="fa fa-twitter"></i>
-                      </a>
-                      <a href="https://medium.com/" target="_blank" title="" class="fa-icon">
-                        <i class="fa fa-medium"></i>
-                      </a>
+          <p>● Managed leads data collected from registrations received for virtual college admissions events<br>
+● Using Excel functions to automate data processing and conducted data analysis to target advertisements using Facebook lookalike audience<br>
+● Developed a WATI WhatsApp bot and managed it for all events<br>
+● Ran Email campaigns using WebEngage</p>
 
-                    </div>
-                  </div>
-                </form>
-            </div>
-
-          </div>
-         
-       </div>
+          <blockquote>
+            <p>"Information is the oil of the 21st century, and analytics is the combustion engine."</p>
+            <small class="pull-right">Anonymous</small>
+          </blockquote>
+        </div>
       </div>
+
+      
+      
+      <!-- <div class="col-md-8 col-md-offset-2 section-container-spacer">
+        <div class="row">
+          <div class="col-xs-12 col-md-6">
+            <img src="./static/assets/images/work001-02.jpg" class="img-responsive" alt="">
+            <p>Menphis skyline</p>
+          </div>
+          <div class="col-xs-12 col-md-6">
+            <img src="./static/assets/images/work001-03.jpg" class="img-responsive" alt="">
+            <p>Menphis skyline</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-xs-12"> -->
+        <!-- <img src="./static/assets/images/work001-04.jpg" class="img-responsive" alt=""> -->
+      </div>
+
     </div>
   </div>
+</div>
 
 
 <footer class="footer-container text-center">
